arboretum/static/css/cards.css
/* ratio of the cards should be 3:2 */

/* reduce the spacing between the cards in the table to conserve space? */

body {
  background-color: rgb(45,45,45) !important;
  color: white !important;
    caret-color: transparent;
}

.card_on_hand {
    height: 8em;
    width: 5.4em;
    border-radius: .5em;
}

.card_on_board {
    height: 4.5em;
    width: 3em;
    border-radius: .5em;
}

.card_on_mini_board {
    height: 2em;
    width: 1.4em;
    border-radius: .25em;
}

.dimmed
{
    opacity: 0.5;
}

.hide
{
    display: none;
}

.zoom:hover {
    scale: 3;
}

.zoom-larger:hover {
    scale: 5;
}

.scoring_tree_type:hover {
  width:100%;
  height:100%;
  top:0;left:0;right:0;
  background-color:rgba(255,255,255, 0.5);
}

.fade-in-text {
  animation: fadeIn 2s;
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

.overlay-button-container {
    position: relative;
    width:100%;
    max-width:120px;
}

.overlay-button-container:before {
  content:"";
  position:absolute;
  width:100%;
  height:100%;
  top:0;left:0;right:0;
  background-color:rgba(0,0,0,0);
}

.overlay-button-container:hover::before {
  background-color:rgba(0,0,0,0.5);
}

.overlay-button-container img {
  display:block;
}

.overlay-button-container input {
  position: absolute;
  top: 88%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  opacity:0.6;
}

.overlay-button-container:hover input {
  opacity: 1;
}

